Fixed xsts based bug generating extra traces